--- a/index.html
+++ b/index.html
@@ -4,8 +4,363 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>moncrm.immo - L'intelligence immobilière, pour de vrai.</title>
-    <link rel="stylesheet" href="style.css">
     <meta name="description" content="Découvrez moncrm.immo, le CRM nouvelle génération pour les agences immobilières. Simplicité, performance et tarifs clairs.">
+    <style>
+        /* VARIABLES ET RÉINITIALISATION */
+        :root {
+            --background-color: #1a1a1a;
+            --card-background: #2a2a2a;
+            --secondary-color: #f04400;
+            --text-color: #ffffff;
+            --light-text-color: #cccccc;
+            --border-color: #444;
+            --font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
+        }
+
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        html {
+            scroll-behavior: smooth;
+        }
+
+        body {
+            font-family: var(--font-family);
+            background-color: var(--background-color);
+            color: var(--text-color);
+            line-height: 1.6;
+            overflow-x: hidden;
+        }
+
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 2rem;
+        }
+
+        /* HEADER */
+        .header {
+            background-color: rgba(26, 26, 26, 0.9);
+            backdrop-filter: blur(5px);
+            position: fixed;
+            width: 100%;
+            z-index: 1000;
+        }
+
+        .header-container {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 1rem 2rem;
+        }
+
+        .logo {
+            font-weight: bold;
+            font-size: 1.5rem;
+        }
+
+        .nav a {
+            color: var(--text-color);
+            text-decoration: none;
+            margin-left: 2rem;
+            font-weight: 500;
+            transition: color 0.3s ease;
+        }
+
+        .nav a:hover {
+            color: var(--secondary-color);
+        }
+
+        /* BOUTONS ET FORMULAIRES */
+        .cta-button {
+            background-color: var(--secondary-color);
+            color: var(--text-color);
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1.2rem;
+            font-weight: bold;
+            cursor: pointer;
+            border-radius: 50px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
+        }
+
+        .cta-button:hover {
+            background-color: #e03c00;
+            transform: translateY(-2px);
+        }
+
+        .input-field {
+            padding: 0.75rem;
+            border-radius: 5px;
+            border: 1px solid var(--border-color);
+            background-color: var(--card-background);
+            color: var(--text-color);
+            font-size: 1rem;
+        }
+        
+        .section-title {
+            font-size: 2.5rem;
+            text-align: center;
+            margin-bottom: 4rem;
+            font-weight: bold;
+            color: var(--secondary-color);
+        }
+
+        .section {
+            padding: 8rem 0;
+        }
+
+        /* SECTIONS SPÉCIFIQUES */
+        .hero {
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            text-align: center;
+            background-image: linear-gradient(rgba(26, 26, 26, 0.8), rgba(26, 26, 26, 0.8)), url('https://images.unsplash.com/photo-1599658880436-afec18d36181?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Mjc3MjV8MHwxfHNlYXJjaHwxfHxjb250ZW1wb3JhcnklMjBjb21wdXRlcnxlbnwwfDB8fHwxNjk0NDQ1MjU5fDA&ixlib=rb-4.0.3&q=80&w=1920');
+            background-size: cover;
+            background-position: center;
+        }
+
+        .hero-content h1 {
+            font-size: 4rem;
+            font-weight: 900;
+        }
+
+        .hero-content p {
+            font-size: 1.5rem;
+            font-weight: 300;
+            max-width: 800px;
+            margin: 1.5rem auto 2.5rem auto;
+            color: var(--light-text-color);
+        }
+
+        .why-us-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .why-us-item {
+            background-color: var(--card-background);
+            padding: 2.5rem;
+            border-radius: 10px;
+            text-align: center;
+        }
+
+        .icon-circle {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: rgba(240, 68, 0, 0.1);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto 1.5rem auto;
+        }
+
+        .icon {
+            width: 30px;
+            height: 30px;
+        }
+
+        .why-us-item h3 {
+            color: var(--secondary-color);
+            margin-bottom: 1rem;
+        }
+
+        .why-us-item p {
+            color: var(--light-text-color);
+        }
+
+        .features-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+            gap: 2rem;
+        }
+
+        .feature-card {
+            background-color: var(--card-background);
+            padding: 2rem;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+
+        .feature-card:hover {
+            transform: translateY(-10px);
+        }
+
+        .feature-card h3 {
+            color: var(--secondary-color);
+            margin-bottom: 0.5rem;
+        }
+
+        .feature-card p {
+            color: var(--light-text-color);
+        }
+
+        /* SECTION PRIX */
+        .pricing {
+            background-color: #2a2a2a;
+        }
+
+        .pricing-card {
+            background-color: var(--card-background);
+            padding: 3rem;
+            border-radius: 15px;
+            text-align: left;
+            max-width: 700px;
+            margin: 0 auto;
+        }
+
+        .pricing-simulator {
+            display: flex;
+            flex-direction: column;
+            gap: 1.5rem;
+            margin-bottom: 2rem;
+        }
+
+        .form-group {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .pricing-summary p {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
+        }
+
+        .price-value {
+            font-size: 1.8rem;
+            font-weight: bold;
+            color: var(--secondary-color);
+            transition: all 0.5s ease-out;
+        }
+
+        /* SECTION TÉMOIGNAGES */
+        .testimonials {
+            position: relative;
+            overflow: hidden;
+        }
+
+        .testimonial-carousel {
+            display: flex;
+            transition: transform 0.5s ease-in-out;
+        }
+
+        .testimonial-item {
+            min-width: 100%;
+            text-align: center;
+            padding: 0 5rem;
+        }
+
+        .quote {
+            font-style: italic;
+            font-size: 1.5rem;
+            max-width: 800px;
+            margin: 0 auto 2rem auto;
+        }
+
+        .author-info {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .author-avatar {
+            width: 60px;
+            height: 60px;
+            border-radius: 50%;
+            background-color: var(--secondary-color);
+            margin-right: 1rem;
+        }
+
+        .author-details {
+            text-align: left;
+        }
+
+        .author-name {
+            display: block;
+            font-weight: bold;
+        }
+
+        .author-agency {
+            font-size: 0.9rem;
+            color: var(--light-text-color);
+        }
+
+        .carousel-nav {
+            text-align: center;
+            margin-top: 2rem;
+        }
+
+        .nav-dot {
+            width: 10px;
+            height: 10px;
+            background-color: var(--border-color);
+            border-radius: 50%;
+            border: none;
+            margin: 0 0.5rem;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        .nav-dot.active {
+            background-color: var(--secondary-color);
+        }
+
+        /* SECTION CTA FINAL */
+        .cta {
+            background-color: var(--secondary-color);
+            text-align: center;
+            padding: 6rem 0;
+        }
+
+        .cta-title {
+            font-size: 3rem;
+            font-weight: bold;
+            margin-bottom: 1rem;
+        }
+
+        .cta-subtitle {
+            font-size: 1.2rem;
+            margin-bottom: 2rem;
+        }
+
+        .cta-button.black {
+            background-color: var(--background-color);
+        }
+
+        /* FOOTER */
+        .footer {
+            text-align: center;
+            padding: 2rem 0;
+            border-top: 1px solid var(--border-color);
+            color: var(--light-text-color);
+        }
+
+        /* ANIMATIONS */
+        .fade-in {
+            opacity: 0;
+            transform: translateY(20px);
+            transition: opacity 1s ease-out, transform 1s ease-out;
+        }
+
+        .fade-in.is-visible {
+            opacity: 1;
+            transform: translateY(0);
+        }
+
+        .delay-1 { transition-delay: 0.2s; }
+        .delay-2 { transition-delay: 0.4s; }
+        .delay-3 { transition-delay: 0.6s; }
+        .delay-4 { transition-delay: 0.8s; }
+    </style>
 </head>
 <body>
 
@@ -42,7 +397,7 @@
                 </div>
                 <div class="why-us-item fade-in delay-2">
                     <div class="icon-circle">
-                        <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/><path d="M12 17a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm0-2a3 3 1 1 0 0-6 3 3 0 0 0 0 6z" fill="#f04400"/></svg>
+                        <svg class="icon" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm0 18c-4.41 0-8-3.59-8-8s3.59-8 8-8 8 3.59 8 8-3.59 8-8 8z"/><path d="M12 17a5 5 0 1 1 0-10 5 5 0 0 1 0 10zm0-2a3 3 0 1 0 0-6 3 3 0 0 0 0 6z" fill="#f04400"/></svg>
                     </div>
                     <h3>Stop au coût exorbitant</h3>
                     <p>Nos tarifs sont clairs, transparents, et sans engagement. Une solution évolutive qui s'adapte à votre croissance, pas l'inverse.</p>
@@ -102,9 +457,9 @@
                 </div>
 
                 <div class="pricing-summary">
-                    <p>Prix total : <span id="total_price" class="price-value">0,00</span> € / mois</p>
-                    <p>Engagement 1 an (-20%) : <span id="price_12_months" class="price-value">0,00</span> € / mois</p>
-                    <p>Offre RENT 2025 (-30%) : <span id="price_rent" class="price-value">0,00</span> € / mois</p>
+                    <p>Prix total : <span id="total_price" class="price-value">0.00</span> € / mois</p>
+                    <p>Engagement 1 an (-20%) : <span id="price_12_months" class="price-value">0.00</span> € / mois</p>
+                    <p>Offre RENT 2025 (-30%) : <span id="price_rent" class="price-value">0.00</span> € / mois</p>
                 </div>
             </div>
         </div>
@@ -117,7 +472,7 @@
                 <div class="testimonial-item active">
                     <p class="quote">"Depuis que nous avons adopté moncrm.immo, nous avons enfin un logiciel qui s'adapte à notre équipe. C'est simple, efficace et le support est excellent."</p>
                     <div class="author-info">
-                        <div class="author-avatar"></div>
+                        <div class="author-avatar" style="background-image: url('https://images.unsplash.com/photo-1534528741775-53994a69daeb?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Mjc3MjV8MHwxfHNlYXJjaHwyfHxwZXJzb24lMjBwb3J0cmFpdHxlbnwwfDB8fHwxNjk0NDQ1NTM3fDA&ixlib=rb-4.0.3&q=80&w=200')"></div>
                         <div class="author-details">
                             <span class="author-name">Marie-Laure T.</span>
                             <span class="author-agency">Agence de la Côte</span>
@@ -127,7 +482,7 @@
                 <div class="testimonial-item">
                     <p class="quote">"Le module de rapprochement est une véritable révolution. Nous gagnons un temps fou et nos ventes ont décollé. Un CRM au top pour les petites agences !"</p>
                     <div class="author-info">
-                        <div class="author-avatar"></div>
+                        <div class="author-avatar" style="background-image: url('https://images.unsplash.com/photo-1544723795-3fb6469e370e?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=M3w0Mjc3MjV8MHwxfHNlYXJjaHwyMnx8cG9ydHJhaXQlMjBwcm9mZXNzaW9uYWx8ZW58MHwwfHx8MTY5NDQ0NTk2Nnww&ixlib=rb-4.0.3&q=80&w=200')"></div>
                         <div class="author-details">
                             <span class="author-name">Jean-Paul V.</span>
                             <span class="author-agency">ImmoSud</span>
@@ -156,6 +511,108 @@
         </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script>
+        document.addEventListener('DOMContentLoaded', () => {
+
+            /* GESTION DU SIMULATEUR DE COÛT */
+            const nbUtilisateursInput = document.getElementById('nb_utilisateurs');
+            const estimationCheckbox = document.getElementById('estimation');
+            const homestagingCheckbox = document.getElementById('homestaging');
+            const totalPriceSpan = document.getElementById('total_price');
+            const price12MonthsSpan = document.getElementById('price_12_months');
+            const priceRentSpan = document.getElementById('price_rent');
+
+            const prixBaseOrganisation = 69;
+            const prixBaseUtilisateur = 19;
+            const prixModuleEstimation = 7;
+            const prixModuleHomestaging = 25;
+
+            function animateValue(obj, start, end, duration) {
+                let startTimestamp = null;
+                const step = (timestamp) => {
+                    if (!startTimestamp) startTimestamp = timestamp;
+                    const progress = Math.min((timestamp - startTimestamp) / duration, 1);
+                    obj.textContent = (start + progress * (end - start)).toFixed(2);
+                    if (progress < 1) {
+                        window.requestAnimationFrame(step);
+                    }
+                };
+                window.requestAnimationFrame(step);
+            }
+
+            function updatePrice() {
+                const nbUtilisateurs = parseInt(nbUtilisateursInput.value, 10) || 0;
+                let total = prixBaseOrganisation;
+
+                if (nbUtilisateurs > 0) {
+                    total += nbUtilisateurs * prixBaseUtilisateur;
+                }
+
+                if (estimationCheckbox.checked) {
+                    total += nbUtilisateurs * prixModuleEstimation;
+                }
+
+                if (homestagingCheckbox.checked) {
+                    total += prixModuleHomestaging;
+                }
+
+                const prix12Mois = total * 0.8;
+                const prixRent = total * 0.7;
+
+                animateValue(totalPriceSpan, parseFloat(totalPriceSpan.textContent), total, 500);
+                animateValue(price12MonthsSpan, parseFloat(price12MonthsSpan.textContent), prix12Mois, 500);
+                animateValue(priceRentSpan, parseFloat(priceRentSpan.textContent), prixRent, 500);
+            }
+
+            nbUtilisateursInput.addEventListener('input', updatePrice);
+            estimationCheckbox.addEventListener('change', updatePrice);
+            homestagingCheckbox.addEventListener('change', updatePrice);
+
+            updatePrice();
+
+            /* GESTION DES ANIMATIONS AU SCROLL */
+            const observerOptions = {
+                root: null,
+                rootMargin: '0px',
+                threshold: 0.1
+            };
+
+            const observer = new IntersectionObserver((entries) => {
+                entries.forEach(entry => {
+                    if (entry.isIntersecting) {
+                        entry.target.classList.add('is-visible');
+                    }
+                });
+            }, observerOptions);
+
+            const animatedElements = document.querySelectorAll('.fade-in, .fade-in-up');
+            animatedElements.forEach(el => observer.observe(el));
+
+
+            /* GESTION DU CARROUSEL DE TÉMOIGNAGES */
+            const testimonialCarousel = document.querySelector('.testimonial-carousel');
+            const testimonialItems = document.querySelectorAll('.testimonial-item');
+            const navDots = document.querySelectorAll('.nav-dot');
+            let currentIndex = 0;
+
+            function updateCarousel() {
+                testimonialCarousel.style.transform = `translateX(-${currentIndex * 100}%)`;
+                navDots.forEach((dot, index) => {
+                    dot.classList.remove('active');
+                    if (index === currentIndex) {
+                        dot.classList.add('active');
+                    }
+                });
+            }
+
+            navDots.forEach((dot, index) => {
+                dot.addEventListener('click', () => {
+                    currentIndex = index;
+                    updateCarousel();
+                });
+            });
+        });
+
+    </script>
 </body>
 </html>
